--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -29,7 +29,7 @@
 
       h2 {
         font-size: 30px;
-        color: rebeccapurple;
+        color: #05F0C5;
         letter-spacing: 10px;
       }
 
@@ -44,7 +44,7 @@
       .buttons {
         button {
           padding: 20px;
-          border: 1px solid white;
+          border: 1px solid #05F0C5;
           border-radius: 10px;
           background-color: transparent;
           color: white;
@@ -56,34 +56,50 @@
 
       img {
         width: 50px;
+        align-self: flex-end;
+
+        @include mobile {
+          align-self: center;
+        }
       }
     }
   }
 
   .imageContainer {
-    height: 100%;
+    height: 95%;
     position: absolute;
     top: 0;
-    right: 0;
+    right: 25px;
+    border-radius: 9999px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     @include mobile {
       height: 50%;
       width: 100%;
       top: unset;
+      right: 0px;
       bottom: 0;
     }
 
     img{
       width: 100%;
       height: 100%;
+      border-radius: 9999px;
       object-fit: cover;
+
+      @include mobile {
+        height: 80%;
+        width: 75%;
+      }
     }
   }
 
   .slidingTextContainer {
     position: absolute;
     font-size: 50vh;
-    bottom: -120px;
+    bottom: 0px;
     white-space: nowrap;
     color: #ffffff09;
     width: 50%;
