--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -28,9 +28,13 @@
       }
 
       h2 {
-        font-size: 30px;
+        font-size: 48px;
         color: #05F0C5;
         letter-spacing: 10px;
+
+        @include mobile {
+          font-size: 30px;
+        }
       }
 
       h1 {
@@ -69,7 +73,7 @@
     height: 95%;
     position: absolute;
     top: 0;
-    right: 25px;
+    right: 50px;
     border-radius: 9999px;
     display: flex;
     align-items: center;
@@ -85,7 +89,7 @@
 
     img{
       width: 100%;
-      height: 100%;
+      height: 85%;
       border-radius: 9999px;
       object-fit: cover;
 
