--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -9,12 +9,23 @@
   justify-content: center;
   overflow: hidden;
 
-  h1 {
-    font-size: 100px;
+  .textContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-    @include mobile {
+    h1 {
       font-size: 72px;
-      text-align: center;
+  
+      @include mobile {
+        text-align: center;
+        margin: 0 0.5rem;
+      }
+    }
+
+    img {
+      width: 50px;
+      margin-top: 1rem;
     }
   }
 
