--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -55,6 +55,7 @@
         @include mobile {
           width: 100%;
           max-height: 300px;
+          margin-top: 3rem
         }
 
         img {
@@ -79,6 +80,7 @@
           padding: 10px;
           align-items: center;
           text-align: center;
+          z-index: 20;
         }
 
         h2 {
